force-app/main/default/objects/D_partement__c/D_partement__c.object-meta.xml
<CustomObject>
    <description>Cet objet liste le code Département avec les libellés correspondants</description>
    <label>Département</label>
    <nameField>
        <label>Nom de Département</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Départements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>