force-app/main/default/objects/D_partement__c/fields/Code_d_partement__c.field-meta.xml
<CustomField>
    <fullName>Code_d_partement__c</fullName>
    <externalId>true</externalId>
    <label>Code département</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>