force-app/main/default/objects/D_partement__c/fields/Code_Region__c.field-meta.xml
<CustomField>
    <fullName>Code_Region__c</fullName>
    <label>Code Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>