force-app/main/default/objects/D_partement__c/fields/R_gion__c.field-meta.xml
<CustomField>
    <fullName>R_gion__c</fullName>
    <label>Région</label>
    <length>60</length>
    <type>Text</type>
</CustomField>